--- a/index.html
+++ b/index.html
@@ -3,13 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Portfólio Gustavo Andrade</title>
 </head>
 <body>
-    
+    <header class="header-container">
+        <div class="header">
+            <div class="checkbox-container">
+                <div  class="checkbox-wrapper">
+                    <input type="checkbox" id="toggle">
+                    <label class="checkbox" for="toggle">
+                        <div class="trace"></div>
+                        <div class="trace"></div>
+                        <div class="trace"></div>
+                        <div class="trace"></div>
+                    </label>
+                    <div class="menu"></div>
+                    <div class="menu-items"></div>
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Formulário</a>
+                        </li>
+                        <li>
+                            <a href="#">Fluig</a>
+                        </li>
+                        <li>
+                            <a href="#">Blog</a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </div>
+        <h1>Gustavo Andrade</h1>
+        <h2>Full Stack Developer</h2>
+        <div class="social-media">
+            <a href="#">Linkedin</a>
+            <a href="#">Github</a>
+            <a href="#">Instagram</a>
+        </div>
+    </header>
+    <main class="container">
+
+    </main>
+    <footer class="footer">
+
+    </footer>
 
 
-
-    
 </body>
 </html>
