--- a/imagens/index (1).html
+++ b/imagens/index (1).html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portfólio Gustavo Andrade</title>
 </head>
-
 <body>
     <header class="header-container">
         <div class="header">
-            <div class="checkbox-container">
+            <div class="checkbox-container" >
                 <div class="checkbox-wrapper">
-                    <input type="checkbox" style="display: none" id="toggle">
+                    <input type="checkbox" id="toggle" style="display: none;">
                     <label class="checkbox" for="toggle">
                         <div class="trace"></div>
                         <div class="trace"></div>
@@ -24,21 +22,24 @@
                     <div class="menu-items">
                         <ul>
                             <li>
-                                <a class="color-items" href="#">Home</a>
+                                <a href="#">Home</a>
                             </li>
                             <li>
-                                <a class="color-items" href="#">Formulário</a>
+                                <a href="#">Formulário</a>
                             </li>
                             <li>
-                                <a class="color-items" href="#">Fluig</a>
+                                <a href="#">Fluig</a>
                             </li>
                             <li>
-                                <a class="color-items" href="#">Blog</a>
+                                <a href="#">Blog</a>
                             </li>
                         </ul>
                     </div>
+                    
                 </div>
+
             </div>
+
         </div>
         <h1>Gustavo Andrade</h1>
         <h2>Full Stack Developer</h2>
@@ -57,5 +58,4 @@
 
 
 </body>
-
 </html>
