Add main and footer

--- a/index.html
+++ b/index.html
@@ -49,11 +49,47 @@
         </div>
     </header>
     <main class="container">
-
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Projeto 1</h2>
+                    <p>Vem ver!</p>
+                </div>
+            </div>
+            <div class="card-text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum dolor placeat cumque accusantium velit,
+                ab quos pariatur ipsa totam deserunt,
+                facilis maiores accusamus veritatis tempore, odio quo cupiditate alias minima?
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Projeto 1</h2>
+                    <p>Vem ver!</p>
+                </div>
+            </div>
+            <div class="card-text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum dolor placeat cumque accusantium velit,
+                ab quos pariatur ipsa totam deserunt,
+                facilis maiores accusamus veritatis tempore, odio quo cupiditate alias minima?
+            </div>
+        </div>
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2>Projeto 1</h2>
+                    <p>Vem ver!</p>
+                </div>
+            </div>
+            <div class="card-text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum dolor placeat cumque accusantium velit,
+                ab quos pariatur ipsa totam deserunt,
+                facilis maiores accusamus veritatis tempore, odio quo cupiditate alias minima?
+            </div>
+        </div>
     </main>
-    <footer class="footer">
-
-    </footer>
+    <footer class="footer">Feito por Gustavo Andrade</footer>
 
 
 </body>
