--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Portfólio Gustavo Andrade</title>
+    <title>Portfólio Gustavo Andrade - Home</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                     <div class="menu-items">
                         <ul>
                             <li>
-                                <a class="color-items" href="home.html">Home</a>
+                                <a class="color-items" href="index.html">Home</a>
                             </li>
                             <li>
                                 <a class="color-items" href="form.html">Formulário</a>
@@ -43,9 +43,9 @@
         <h1>Gustavo Andrade</h1>
         <h2>Full Stack Developer</h2>
         <div class="social-media">
-            <a href="https://www.linkedin.com/in/gustavo-nascimento-andrade-5504aa201/" target="_blank">Linkedin</a>
-            <a href="https://github.com/Gustavoandradedev" target="_blank">Github</a>
-            <a href="https://www.instagram.com/gustavojiu/" target="_blank">Instagram</a>
+            <a href="#">Linkedin</a>
+            <a href="#">Github</a>
+            <a href="#">Instagram</a>
         </div>
     </header>
     <main class="container">
