--- a/index.html
+++ b/index.html
@@ -47,47 +47,45 @@
             <a href="https://github.com/Gustavoandradedev" target="_blank">Github</a>
             <a href="https://www.instagram.com/gustavojiu/" target="_blank">Instagram</a>
         </div>
+        <div class="info">👇 <b>PROJETOS</b> 👇</div>
     </header>
+    <hr color="black">
     <main class="container">
+        <p></p>
         <div class="card-container">
+            <a href="https://www.instagram.com/gustavojiu/" target="_blank">
             <div class="card">
                 <div class="card-wrapper">
-                    <h2>Projeto 1</h2>
+                    <h2>Projeto Ds Celebridades</h2>
                     <p>Vem ver!</p>
                 </div>
             </div>
-            <div class="card-text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum dolor placeat cumque accusantium velit,
-                ab quos pariatur ipsa totam deserunt,
-                facilis maiores accusamus veritatis tempore, odio quo cupiditate alias minima?
+            </a>
+            <div class="card-text"><b>
+                A DS Celebridades é uma aplicação full stack web e mobile construída durante a 4ª edição da Semana
+                DevSuperior, evento organizado pela DevSuperior.
+                A aplicação consiste em um dashboard que acessa um relatório de vendas de vários vendedores informando a
+                quantidade de clientes visitados e de negócios fechados, onde os dados aparecem na tela e ficam a
+                disposição do usuário.</b>
             </div>
         </div>
-        <div class="card-container">
-            <div class="card">
-                <div class="card-wrapper">
-                    <h2>Projeto 1</h2>
+        <p></p>
+        <p></p>
+        <div class="card-container1">
+            <div class="card1">
+                <div class="card-wrapper1">
+                    <h2>Projeto Ds Deliver</h2>
                     <p>Vem ver!</p>
                 </div>
             </div>
-            <div class="card-text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum dolor placeat cumque accusantium velit,
-                ab quos pariatur ipsa totam deserunt,
-                facilis maiores accusamus veritatis tempore, odio quo cupiditate alias minima?
+            <div class="card-text1"><b>
+                DS Deliver é uma aplicação full stack web e mobile construída durante a 2º edição da Semana DevSuperior
+                2.0, o evento organizado pela DevSuperior. A aplicação consiste em um sistema de pedidos e entregas,
+                onde os pedidos são feitos pelo app web e listados no app mobile, contendo as informações do pedido e
+                através de cada pedido, contém 8 opções de pratos.</b>
             </div>
         </div>
-        <div class="card-container">
-            <div class="card">
-                <div class="card-wrapper">
-                    <h2>Projeto 1</h2>
-                    <p>Vem ver!</p>
-                </div>
-            </div>
-            <div class="card-text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum dolor placeat cumque accusantium velit,
-                ab quos pariatur ipsa totam deserunt,
-                facilis maiores accusamus veritatis tempore, odio quo cupiditate alias minima?
-            </div>
-        </div>
+        <p></p>
     </main>
     <footer class="footer">Feito por Gustavo Andrade</footer>
 </body>
