Added page, blog, fluig and form

--- a/index.html
+++ b/index.html
@@ -53,36 +53,41 @@
     <main class="container">
         <p></p>
         <div class="card-container">
-            <a href="https://www.instagram.com/gustavojiu/" target="_blank">
-            <div class="card">
-                <div class="card-wrapper">
-                    <h2>Projeto Ds Celebridades</h2>
-                    <p>Vem ver!</p>
+            <a class="custom" href="https://dsvendas-celebridades.netlify.app/" target="_blank">
+                <div class="card">
+                    <div class="card-wrapper">
+                        <h2>Projeto Ds Celebridades</h2>
+                        <p>Vem ver!</p>
+                    </div>
                 </div>
-            </div>
             </a>
             <div class="card-text"><b>
-                A DS Celebridades é uma aplicação full stack web e mobile construída durante a 4ª edição da Semana
-                DevSuperior, evento organizado pela DevSuperior.
-                A aplicação consiste em um dashboard que acessa um relatório de vendas de vários vendedores informando a
-                quantidade de clientes visitados e de negócios fechados, onde os dados aparecem na tela e ficam a
-                disposição do usuário.</b>
+                    A DS Celebridades é uma aplicação full stack web e mobile construída durante a 4ª edição da Semana
+                    DevSuperior, evento organizado pela DevSuperior.
+                    A aplicação consiste em um dashboard que acessa um relatório de vendas de vários vendedores
+                    informando a
+                    quantidade de clientes visitados e de negócios fechados, onde os dados aparecem na tela e ficam a
+                    disposição do usuário.</b>
             </div>
         </div>
         <p></p>
         <p></p>
         <div class="card-container1">
-            <div class="card1">
-                <div class="card-wrapper1">
-                    <h2>Projeto Ds Deliver</h2>
-                    <p>Vem ver!</p>
+            <a class="custom" href="https://ifood-sds2.netlify.app/" target="_blank">
+                <div class="card1">
+                    <div class="card-wrapper1">
+                        <h2>Projeto Ds Deliver</h2>
+                        <p>Vem ver!</p>
+                    </div>
                 </div>
-            </div>
+            </a>
             <div class="card-text1"><b>
-                DS Deliver é uma aplicação full stack web e mobile construída durante a 2º edição da Semana DevSuperior
-                2.0, o evento organizado pela DevSuperior. A aplicação consiste em um sistema de pedidos e entregas,
-                onde os pedidos são feitos pelo app web e listados no app mobile, contendo as informações do pedido e
-                através de cada pedido, contém 8 opções de pratos.</b>
+                    DS Deliver é uma aplicação full stack web e mobile construída durante a 2º edição da Semana
+                    DevSuperior
+                    2.0, o evento organizado pela DevSuperior. A aplicação consiste em um sistema de pedidos e entregas,
+                    onde os pedidos são feitos pelo app web e listados no app mobile, contendo as informações do pedido
+                    e
+                    através de cada pedido, contém 8 opções de pratos.</b>
             </div>
         </div>
         <p></p>
