--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="menu-items">
                         <ul>
                             <li>
-                                <a class="color-items" href="home.html">Home</a>
+                                <a class="color-items" href="index.html">Home</a>
                             </li>
                             <li>
                                 <a class="color-items" href="form.html">Formulário</a>
