--- a/form.html
+++ b/form.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="form.css">
     <title>Portfólio Gustavo Andrade - Formulário</title>
 </head>
 
@@ -43,16 +41,168 @@
             </div>
         </div>
     </header>
-    <section>
-        <div class="sec">
-        <h1>Formulário</h1>
+    <section class="formulario">
+        <div class="tittle-form">
+            <h1>Relatório de Despesas </h1>
+        </div>
+        <div>
+            <h3>Solicitantes</h3>
+        </div>
+        <form action="">
+            <div class="table-info">
+                <label for=""><b>Solicitante</b></label>
+                <input type="text" name="" id="">
+                <label for=""><b>Email</b></label>
+                <input type="text" name="" id="">
+                <label for=""><b>Empresa</b></label>
+                <input type="text" name="" id="">
+                <label for=""><b>Área</b></label>
+                <input type="text" name="" id="">
+            </div>
+            <h3>Despesas</h3>
+            <button class="buttom-incluir"><b> + Incluir</b></button>
+            <div class="table-despesas ">
+                <div class="title-despesas">
+                    <label class="cat" for=""><b>Categoria</b></label>
+                    <label class="desc" for=""><b>Descrição</b></label>
+                    <label class="valor-uni" for=""><b>Vlr.Unitário</b></label>
+                    <label class="qtn" for=""><b>Quantidade</b></label>
+                    <label class="valor-t" for=""><b>Vlr.Total</b></label>
+                </div>
+                <div class="table-categorias">
+                    <button>X</button>
+                    <select name="" id="">
+                        <option value="">Pedagio</option>
+                        <option value="">Hospedagem</option>
+                        <option value="">Combustivel</option>
+                        <option value="">Alimentação</option>
+                        <option value="">Outros</option>
+                    </select>
+                    <input class="descricao" type="text" required />
+                    <input class="uni" type="number" required />
+                    <input class="qnt" type="number" required />
+                    <input class="total" type="number" required readonly />
+                </div>
+                <div class="title-despesas">
+                    <label class="cat" for=""><b>Categoria</b></label>
+                    <label class="desc" for=""><b>Descrição</b></label>
+                    <label class="valor-uni" for=""><b>Vlr.Unitário</b></label>
+                    <label class="qtn" for=""><b>Quantidade</b></label>
+                    <label class="valor-t" for=""><b>Vlr.Total</b></label>
+                </div>
+                <div class="table-categorias">
+                    <button>X</button>
+                    <select name="" id="">
+                        <option value="">Pedagio</option>
+                        <option value="">Hospedagem</option>
+                        <option value="">Combustivel</option>
+                        <option value="">Alimentação</option>
+                        <option value="">Outros</option>
+                    </select>
+                    <input class="descricao" type="text" required />
+                    <input class="uni" type="number" required />
+                    <input class="qnt" type="number" required />
+                    <input class="total" type="number" required readonly />
+                </div>
+                <div class="title-despesas">
+                    <label class="cat" for=""><b>Categoria</b></label>
+                    <label class="desc" for=""><b>Descrição</b></label>
+                    <label class="valor-uni" for=""><b>Vlr.Unitário</b></label>
+                    <label class="qtn" for=""><b>Quantidade</b></label>
+                    <label class="valor-t" for=""><b>Vlr.Total</b></label>
+                </div>
+                <div class="table-categorias">
+                    <button>X</button>
+                    <select name="" id="">
+                        <option value="">Pedagio</option>
+                        <option value="">Hospedagem</option>
+                        <option value="">Combustivel</option>
+                        <option value="">Alimentação</option>
+                        <option value="">Outros</option>
+                    </select>
+                    <input class="descricao" type="text" required />
+                    <input class="uni" type="number" required />
+                    <input class="qnt" type="number" required />
+                    <input class="total" type="number" required readonly />
+                </div>
+                <div class="title-despesas">
+                    <label class="cat" for=""><b>Categoria</b></label>
+                    <label class="desc" for=""><b>Descrição</b></label>
+                    <label class="valor-uni" for=""><b>Vlr.Unitário</b></label>
+                    <label class="qtn" for=""><b>Quantidade</b></label>
+                    <label class="valor-t" for=""><b>Vlr.Total</b></label>
+                </div>
+                <div class="table-categorias">
+                    <button>X</button>
+                    <select name="" id="">
+                        <option value="">Pedagio</option>
+                        <option value="">Hospedagem</option>
+                        <option value="">Combustivel</option>
+                        <option value="">Alimentação</option>
+                        <option value="">Outros</option>
+                    </select>
+                    <input class="descricao" type="text" required />
+                    <input class="uni" type="number" required />
+                    <input class="qnt" type="number" required />
+                    <input class="total" type="number" required readonly />
+                </div>
+                <div class="title-despesas">
+                    <label class="cat" for=""><b>Categoria</b></label>
+                    <label class="desc" for=""><b>Descrição</b></label>
+                    <label class="valor-uni" for=""><b>Vlr.Unitário</b></label>
+                    <label class="qtn" for=""><b>Quantidade</b></label>
+                    <label class="valor-t" for=""><b>Vlr.Total</b></label>
+                </div>
+                <div class="table-categorias">
+                    <button>X</button>
+                    <select name="" id="">
+                        <option value="">Pedagio</option>
+                        <option value="">Hospedagem</option>
+                        <option value="">Combustivel</option>
+                        <option value="">Alimentação</option>
+                        <option value="">Outros</option>
+                    </select>
+                    <input class="descricao" type="text" required />
+                    <input class="uni" type="number" required />
+                    <input class="qnt" type="number" required />
+                    <input class="total" type="number" required readonly />
+                </div>
+                <div class="title-despesas">
+                    <label class="cat" for=""><b>Categoria</b></label>
+                    <label class="desc" for=""><b>Descrição</b></label>
+                    <label class="valor-uni" for=""><b>Vlr.Unitário</b></label>
+                    <label class="qtn" for=""><b>Quantidade</b></label>
+                    <label class="valor-t" for=""><b>Vlr.Total</b></label>
+                </div>
+                <div class="table-categorias">
+                    <button>X</button>
+                    <select name="" id="">
+                        <option value="">Pedagio</option>
+                        <option value="">Hospedagem</option>
+                        <option value="">Combustivel</option>
+                        <option value="">Alimentação</option>
+                        <option value="">Outros</option>
+                    </select>
+                    <input class="descricao" type="text" required />
+                    <input class="uni" type="number" required />
+                    <input class="qnt" type="number" required />
+                    <input class="total" type="number" required readonly />
+                </div>
+                <div class="total-geral">
+                    <h2>Total Geral</h2>
+                    <input type="text">
+                </div>
+        </form>
+        <div class="social-media">
+            <a class="teste" href="" target="_blank">Ações</a>
+            <a class="teste1" href="" target="_blank">Limpar</a>
+            <a class="teste2" href="" target="_blank">Cancelar</a>
+            <a class="teste3" href="" target="_blank">Enviar</a>
         </div>
     </section>
-    
+
     <footer class="footer">Feito por Gustavo Andrade</footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    
 </body>
 
 </html>
