--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="blog.css">
     <title>Portfólio Gustavo Andrade - Blog</title>
 </head>
 
@@ -43,18 +44,20 @@
         <h1>Blog</h1>
         <div>
             <p class="p-blog">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Eveniet asperiores adipisci provident voluptates
-            eaque nisi quas voluptatum excepturi fugit odio odit soluta 
-            ex suscipit laborum quo fugiat, nulla saepe
-            explicabo. 
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Eveniet asperiores adipisci provident voluptates
+                eaque nisi quas voluptatum excepturi fugit odio odit soluta
+                ex suscipit laborum quo fugiat, nulla saepe
+                explicabo.
             </p>
         </div>
     </header>
     <main class="container">
-        
-
-
+        <div id="corpo">
+        <video controls >
+            <source src="./videos/formGustavo.mp4" type="video/mp4">
+        </video>
+    </div>
     </main>
     <footer class="footer">Feito por Gustavo Andrade</footer>
 </body>
