Update css blog

--- a/blog.html
+++ b/blog.html
@@ -50,14 +50,17 @@
                 ex suscipit laborum quo fugiat, nulla saepe
                 explicabo.
             </p>
+            <h2 style="text-align: center; padding: 5px;">👇 Apresentação do formulário 👇</h2>
+
         </div>
     </header>
+
     <main class="container">
         <div id="corpo">
-        <video controls >
-            <source src="./videos/formGustavo.mp4" type="video/mp4">
-        </video>
-    </div>
+            <video controls>
+                <source src="./videos/formGustavo.mp4" type="video/mp4">
+            </video>
+        </div>
     </main>
     <footer class="footer">Feito por Gustavo Andrade</footer>
 </body>
